[package]
name = "bevy_despawn_with"
version = "0.15.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "despawn", "ecs"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/bevy_despawn_with"
description = "Commands extension trait for despawning multiple entities"
readme = "README.md"

[dependencies]
bevy = { version = "0.10", default_features = false }